--- a/src/toolbar/index.css
+++ b/src/toolbar/index.css
@@ -39,11 +39,11 @@
 
 .jp-Toolbar-button.jp-mod-pressed {
     background-color: #E0E0E0;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 0px 1px rgba(0, 0, 0, 0.5);
 }
 
 
 .jp-Toolbar-button:hover {
     background-color: #EEEEEE;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 0px 1px rgba(0, 0, 0, 0.5);
 }
